# LineTrackingCar

./: CMakeLists.txt  README  compile.sh  compilePi.sh  cpf.sh  fake.cpp  fake1.cpp  fake2.cpp  main.cpp  test
CarControl/: ControlConfigs.h
abandonCarControl/: CarControl.cpp  CarControl.h  CarControlMethod.cpp  ControlConfiguration.txt  GetControlConfig.cpp
carControl/: CarControl.cpp  CarControl.h  CarControlMethod.cpp  CarControlMethod.h  ControlConfigs.h  ControlConfiguration.txt  Distances.cpp  Distances.h  GetControlConfig.cpp  GetControlConfig.h  PID.cpp  PID.h  Speeds.cpp  Speeds.h  carControl.cpp  control_1.cpp  control_2.cpp  control_3.cpp  control_4.cpp  initControl.cpp
carControl/class/: ControlConfigs.h  Distances.cpp  PID.h  Speeds.cpp  Speeds.h
imageProcess/: process.cpp  process1.cpp
